# android_hardware_replicant_libsamsung-ipc

./: .checkpatch.conf  .gitignore  AUTHORS  Android.mk  CONTRIBUTING  ChangeLog  MAINTAINERS  Makefile.am  README  android_versions.mk  configure.ac  gprs+ss_modif.diff  guix.scm  samsung-ipc-1.0.pc.in  samsung-ipc.pc.in
include/: Makefile.am  call.h  disp.h  gen.h  gprs.h  imei.h  misc.h  net.h  pb.h  protocol.h  pwr.h  radio.h  rfs.h  samsung-ipc.h  sat.h  sec.h  sms.h  snd.h  ss.h  svc.h  types.h  wakelock.h
include/device/crespo/: call.h  gen.h
include/device/h1/: call.h  disp.h  gen.h  misc.h  net.h  sms.h
include/device/ipc-v4/: call.h  disp.h  gen.h  misc.h  net.h  sms.h
samsung-ipc/: Makefile.am  call.c  gen.c  gprs.c  ipc.c  ipc.h  ipc_devices.c  ipc_devices.h  ipc_private.h  ipc_strings.c  ipc_util.c  ipc_utils.c  misc.c  net.c  rfs.c  sec.c  sms.c  svc.c  util.c  util.h  utils.c  utils.h  wakelock.c
samsung-ipc/device/aries/: aries_ipc.c  aries_ipc.h  phonet.h  sipc4.h
samsung-ipc/device/crespo/: crespo_ipc.c  crespo_ipc.h
samsung-ipc/device/galaxys2/: galaxys2_ipc.c  galaxys2_ipc.h  galaxys2_loader.c  galaxys2_loader.h
samsung-ipc/device/galaxys3/: galaxys3_ipc.c  galaxys3_ipc.h
samsung-ipc/device/galaxysmtd/: galaxysmtd_ipc.c  galaxysmtd_ipc.h  galaxysmtd_nv_data.c  galaxysmtd_nv_data.h
samsung-ipc/device/h1/: h1_ipc.c  h1_ipc.h
samsung-ipc/device/i9300/: i9300_ipc.h
samsung-ipc/device/maguro/: maguro_ipc.c  maguro_ipc.h  maguro_loader.c  maguro_loader.h
samsung-ipc/device/n7100/: n7100_ipc.c  n7100_ipc.h
samsung-ipc/device/piranha/: piranha_ipc.c  piranha_ipc.h  piranha_loader.c  piranha_loader.h
samsung-ipc/device/xmm6160/: xmm6160.c  xmm6160.h
samsung-ipc/device/xmm6260/: fwloader_i9100.c  fwloader_i9100.h  fwloader_i9250.c  fwloader_i9250.h  io_helpers.c  io_helpers.h  log.c  log.h  modem_prj.h  modemctl_common.c  modemctl_common.h  xmm6260.c  xmm6260.h  xmm6260_hsic.c  xmm6260_hsic.h  xmm6260_ipc.c  xmm6260_ipc.h  xmm6260_loader.c  xmm6260_loader.h  xmm6260_mipi.c  xmm6260_mipi.h  xmm6260_modemctl.c  xmm6260_modemctl.h  xmm6260_sec_modem.c  xmm6260_sec_modem.h
samsung-ipc/devices/: Makefile.am  ipc_devices.c  ipc_devices.h
samsung-ipc/devices/aries/: aries.c  aries.h  aries_ipc.c  aries_ipc.h  onedram.h  phonet.h
samsung-ipc/devices/crespo/: crespo.c  crespo.h  crespo_ipc.c  crespo_ipc.h  crespo_modem_ctl.h
samsung-ipc/devices/galaxys2/: galaxys2.c  galaxys2.h  galaxys2_ipc.c  galaxys2_ipc.h
samsung-ipc/devices/generic/: generic.c  generic.h
samsung-ipc/devices/herolte/: herolte.c  herolte.h
samsung-ipc/devices/i9300/: i9300.c  i9300.h  i9300_ipc.c  i9300_ipc.h
samsung-ipc/devices/maguro/: maguro.c  maguro.h  maguro_ipc.c  maguro_ipc.h
samsung-ipc/devices/n5100/: n5100.c  n5100.h
samsung-ipc/devices/n7100/: n7100.c  n7100.h  n7100_ipc.c  n7100_ipc.h
samsung-ipc/devices/piranha/: piranha.c  piranha.h  piranha_ipc.c  piranha_ipc.h
samsung-ipc/devices/xmm616/: xmm616.c  xmm616.h
samsung-ipc/devices/xmm6160/: xmm6160.c  xmm6160.h
samsung-ipc/devices/xmm626/: modem.h  modem_link_device_hsic.h  xmm626.c  xmm626.h  xmm626_hsic.c  xmm626_hsic.h  xmm626_mipi.c  xmm626_mipi.h  xmm626_sec_modem.c  xmm626_sec_modem.h
samsung-ipc/devices/xmm6260/: modem.h  modem_link_device_hsic.h  xmm6260.c  xmm6260.h  xmm6260_hsic.c  xmm6260_hsic.h  xmm6260_mipi.c  xmm6260_mipi.h  xmm6260_sec_modem.c  xmm6260_sec_modem.h
samsung-ipc/modems/: Makefile.am
samsung-ipc/modems/xmm616/: xmm616.c  xmm616.h
samsung-ipc/modems/xmm626/: xmm626.c  xmm626.h  xmm626_hsic.c  xmm626_hsic.h  xmm626_kernel_smdk4412.c  xmm626_kernel_smdk4412.h  xmm626_mipi.c  xmm626_mipi.h  xmm626_modem_if.h  xmm626_modem_link_device_hsic.h  xmm626_modem_prj.h  xmm626_sec_modem.c  xmm626_sec_modem.h
samsung-ipc/modems/xmm626/kernel/linux/: xmm626_kernel_linux.c  xmm626_kernel_linux.h
samsung-ipc/partitions/: Makefile.am
samsung-ipc/partitions/android/: android.c  android.h
samsung-ipc/partitions/toc/: toc.c  toc.h
samsung-ipc/tests/: Makefile.am  libsamsung-ipc-test.py  main.c
samsung-ipc/tests/partitions/: android.c  android.h
scripts/: check_code_style_conversion.py  guix.scm
tools/: Makefile.am  forward.c  ipc-imei.c  ipc-modem  ipc-modem.c  ipc-test  ipc-test.c  modemctrl.c  nv_data-imei.c  nv_data-imei.h  nv_data-imei.py  nv_data-md5.c  nv_data-md5.py  rfs-imei.c
tools/common/: modem.c  modem.h
vapi/: samsung-ipc-1.0.vapi
