NULL =

SUBDIRS = \
	samsung-ipc \
	include \
	tools \
	$(NULL)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = samsung-ipc.pc

EXTRA_DIST = \
	MAINTAINERS \
	samsung-ipc.pc \
	$(NULL)

MAINTAINERCLEANFILES = \
	aclocal.m4 compile config.guess config.sub \
	configure depcomp install-sh ltmain.sh     \
	Makefile.in missing config.h.in            \
	mkinstalldirs *~ \
	$(NULL)
