NULL =

samsung_ipcincludedir = $(includedir)/samsung-ipc-1.0/
samsung_ipcinclude_HEADERS = \
	call.h \
	disp.h \
	gen.h \
	misc.h \
	net.h \
	radio.h \
	sec.h \
	sms.h \
	ss.h \
	pwr.h \
	types.h \
	util.h \
	gprs.h \
	snd.h \
	rfs.h \
	$(NULL)

samsung_ipc_v4includedir = $(includedir)/samsung-ipc-1.0/device/ipc-v4/
samsung_ipc_v4include_HEADERS = \
	device/ipc-v4/call.h \
	device/ipc-v4/net.h \
	device/ipc-v4/sms.h \
	device/ipc-v4/misc.h \
	device/ipc-v4/gen.h \
	device/ipc-v4/disp.h \
	$(NULL)

samsung_ipc_h1includedir = $(includedir)/samsung-ipc-1.0/device/h1/
samsung_ipc_h1include_HEADERS = \
	device/h1/net.h \
	device/h1/sms.h \
	device/h1/misc.h \
	device/h1/gen.h \
	device/h1/call.h \
	$(NULL)
