libsamsung_ipc_la_SOURCES += \
	devices/ipc_devices.c \
	devices/ipc_devices.h \
	devices/crespo/crespo.c \
	devices/crespo/crespo.h \
	devices/crespo/crespo_modem_ctl.h \
	devices/aries/aries.c \
	devices/aries/aries.h \
	devices/aries/onedram.h \
	devices/aries/phonet.h \
	devices/galaxys2/galaxys2.c \
	devices/galaxys2/galaxys2.h \
	devices/maguro/maguro.c \
	devices/maguro/maguro.h \
	devices/piranha/piranha.c \
	devices/piranha/piranha.h \
	devices/i9300/i9300.c \
	devices/i9300/i9300.h \
	devices/n7100/n7100.c \
	devices/n7100/n7100.h \
	devices/n5100/n5100.c \
	devices/n5100/n5100.h \
	devices/herolte/herolte.c \
	devices/herolte/herolte.h \
	devices/generic/generic.c \
	devices/generic/generic.h \
	$(NULL)
