libsamsung_ipc_la_SOURCES += \
	modems/xmm616/xmm616.c \
	modems/xmm616/xmm616.h \
	modems/xmm626/xmm626.c \
	modems/xmm626/xmm626.h \
	modems/xmm626/xmm626_hsic.c \
	modems/xmm626/xmm626_hsic.h \
	modems/xmm626/xmm626_kernel_smdk4412.c \
	modems/xmm626/xmm626_kernel_smdk4412.h \
	modems/xmm626/xmm626_mipi.c \
	modems/xmm626/xmm626_mipi.h \
	modems/xmm626/xmm626_modem_if.h \
	modems/xmm626/xmm626_modem_link_device_hsic.h \
	modems/xmm626/xmm626_modem_prj.h \
	$(NULL)
